--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,177 @@
 * {
-  /* margin: 0;
-  padding: 0; */
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+:root {
+  --light-primary-color: #BBDEFB;
+  --primary-color: #2196F3;
+  --dark-primary-color: #1976D2;
+  --text-icons-color: #fff;
+  --accent-color: #03A9f4;
+  --primary-text-color: #212121;
+  --secondary-text-color: #757575;
+  --divider-text-color: #BDBDBD;
 }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
-  
+  color: var(--primary-text-color);
+  background-color: #e5e5e5;
+  margin: 0 32px;
 }
 
-.hidden {
+body .modal-wrapper.hidden {
   display: none;
 }
+
+body .active-modal {
+  display: block;
+  background-color: #000000ad;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+
+body .main-header {
+  text-align: center;
+  padding: 16px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid var(--primary-text-color);
+}
+
+body .section-title {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+body .product-section ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 600px;
+  margin: 0 auto;
+  border-spacing: 0 8px;
+}
+
+body .product-section ul li {
+  margin-bottom: 10px;
+  text-align: left;
+  background-color: var(--text-icons-color);
+  padding: 16px 32px;
+  width: 100%;
+  border-radius: 8px;
+}
+
+body .modal-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .modal-wrapper .product-modal {
+  margin: 15px auto;
+  display: block;
+  width: 100%;
+  max-width: 550px;
+  background-color: var(--text-icons-color);
+  border-radius: 16px;
+  padding: 16px;
+}
+
+body .modal-wrapper form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .modal-wrapper form .input-wrapper label {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+body .modal-wrapper form .input-wrapper input {
+  padding: 8px;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid var(--primary-text-color);
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body .modal-wrapper form button {
+  border: none;
+  padding: 16px 32px;
+  width: 200px;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--text-icons-color);
+  margin: 15px 0;
+  cursor: pointer;
+  background-color: var(--primary-color);
+}
+
+body .add-product-btn {
+  text-decoration: none;
+  background-color: var(--accent-color);
+  color: var(--text-icons-color);
+  position: absolute;
+  font-size: 2rem;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  bottom: 50px;
+  right: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -webkit-transition: opacity 200ms ease-in-out;
+  transition: opacity 200ms ease-in-out;
+}
+
+body:hover {
+  opacity: 0.8;
+}
+/*# sourceMappingURL=style.css.map */
