--- a/css/style.css
+++ b/css/style.css
@@ -132,17 +132,32 @@ body .modal-wrapper form .input-wrapper input {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body .modal-wrapper form button {
+body .modal-wrapper form .form-btn {
   border: none;
   padding: 16px 32px;
-  width: 200px;
+  width: 150px;
   border-radius: 4px;
   font-size: 16px;
   font-weight: bold;
   color: var(--text-icons-color);
-  margin: 15px 0;
+  margin: 15px 5px;
   cursor: pointer;
   background-color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+}
+
+body .modal-wrapper form .cancel-btn {
+  text-decoration: none;
+  border: 2px solid var(--primary-color);
+  background-color: var(--text-icons-color);
+  color: var(--primary-color);
+  opacity: 0.8;
+  -webkit-transition: opacity 50ms ease-in-out;
+  transition: opacity 50ms ease-in-out;
+}
+
+body .modal-wrapper form .cancel-btn:hover {
+  opacity: 1;
 }
 
 body .add-product-btn {
