--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ body .add-product-btn {
   text-decoration: none;
   background-color: var(--accent-color);
   color: var(--text-icons-color);
-  position: absolute;
+  position: fixed;
   font-size: 2rem;
   width: 50px;
   height: 50px;
