--- a/css/style.scss
+++ b/css/style.scss
@@ -144,7 +144,7 @@ body {
     text-decoration: none;
     background-color: var(--accent-color);
     color: var(--text-icons-color);
-    position: absolute;
+    position: fixed;
     font-size: 2rem;
     width: 50px;
     height: 50px;  
