--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   color: var(--primary-text-color);
-  background-color: #e5e5e5;
+  background-color: #FFF;
   margin: 0 32px;
 }
 
@@ -50,7 +50,7 @@ body .section-title {
   margin-bottom: 15px;
 }
 
-body .product-section ul {
+body .product-section ul.product-list {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -70,10 +70,12 @@ body .product-section ul {
   border-spacing: 0 8px;
 }
 
-body .product-section ul li {
+body .product-section ul.product-list li.product-item {
   margin-bottom: 10px;
   text-align: left;
   background-color: var(--text-icons-color);
+  -webkit-box-shadow: 1px 1px 5px #2121215b;
+          box-shadow: 1px 1px 5px #2121215b;
   padding: 16px 32px;
   width: 100%;
   border-radius: 8px;
