--- a/css/style.scss
+++ b/css/style.scss
@@ -19,7 +19,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   color: var(--primary-text-color);
-  background-color: #e5e5e5;
+  background-color: #FFF;
   margin: 0 32px;
   
   .modal-wrapper.hidden {
@@ -50,7 +50,7 @@ body {
 
   .product-section {
 
-    ul {
+    ul.product-list {
       list-style: none;
       display: flex;
       flex-direction: column;
@@ -61,10 +61,11 @@ body {
       border-spacing: 0 8px;
 
       
-      li {
+      li.product-item {
         margin-bottom: 10px;
         text-align: left;
         background-color: var(--text-icons-color);
+        box-shadow: 1px 1px 5px #2121215b;
         padding: 16px 32px;
         width: 100%;
         border-radius: 8px;
