--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ body .add-product-btn {
   height: 50px;
   border-radius: 50%;
   overflow: hidden;
-  bottom: 50px;
+  bottom: 30px;
   right: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -190,5 +190,22 @@ body .add-product-btn {
 
 body .add-product-btn:hover {
   opacity: 0.8;
+}
+
+body .prod-add-success {
+  position: absolute;
+  bottom: 30px;
+  left: -310px;
+  padding: 2rem;
+  background-color: var(--accent-color);
+  color: var(--text-icons-color);
+  border-radius: 0.5rem;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+body .success-active {
+  bottom: 30px;
+  left: 30px;
 }
 /*# sourceMappingURL=style.css.map */
