--- a/css/style.scss
+++ b/css/style.scss
@@ -151,7 +151,7 @@ body {
     height: 50px;  
     border-radius: 50%;
     overflow: hidden;
-    bottom: 50px;
+    bottom: 30px;
     right: 50px;
     display: flex;
     justify-content: center;
@@ -162,6 +162,22 @@ body {
     &:hover {
       opacity: 0.8;
     }
+  }
+
+  .prod-add-success {
+    position: absolute;
+    bottom: 30px;
+    left: -310px;
+    padding: 2rem;
+    background-color: var(--accent-color);
+    color: var(--text-icons-color);
+    border-radius: 0.5rem;
+    transition: all 300ms ease-in-out;
+  }
+
+  .success-active {
+    bottom: 30px;
+    left: 30px;
   }
 
 }
